--- a/gallery.html
+++ b/gallery.html
@@ -41,12 +41,16 @@
 <!-- Gallery -->>
 <div class="scroll-content">
 <div style="filter: blur(0px); background-color: black; width: 100%; height: 100%;"> 
-    <div class="embedsocial-hashtag" data-ref="3595703cff00f419d6531a786cc9786ae823abe4"> 
+    <!-- <div class="embedsocial-hashtag" data-ref="3595703cff00f419d6531a786cc9786ae823abe4"> 
         <a class="feed-powered-by-es feed-powered-by-es-feed-img es-widget-branding" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Instagram widget"> 
             <img src="https://embedsocial.com/cdn/icon/embedsocial-logo.webp" alt="EmbedSocial"> 
             <div class="es-widget-branding-text">Instagram widget</div> </a> </div> 
-            <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>    
-</div>
+            <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>     -->
+
+
+            <iframe src="https://www.juicer.io/api/feeds/restfulstill-designs/iframe" frameborder="0" width="1000" height="1000" style="display:block;margin:0 auto;"></iframe>
+
+        </div>
 </div>
 
 </body>
